--- a/BlazorServerTooltipsTest/wwwroot/css/site.css
+++ b/BlazorServerTooltipsTest/wwwroot/css/site.css
@@ -66,3 +66,9 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+.custom-tooltip {
+    --bs-tooltip-bg: yellow;
+    --bs-tooltip-color: red;
+}
+
