--- a/BlazorTooltips/Tooltip.razor
+++ b/BlazorTooltips/Tooltip.razor
@@ -1,6 +1,8 @@
 ﻿@inject Microsoft.JSInterop.IJSRuntime jsRuntime
 
-<div id="@($"bootstrap-tooltip-{_id}")" data-bs-toggle="tooltip" @attributes=AllOtherAttributes>
+<div id="@($"bootstrap-tooltip-{_id}")" 
+      data-bs-toggle="tooltip" 
+      @attributes=AllOtherAttributes>
     @ChildContent
 </div>
 
