--- a/BlazorServerTooltipsTest/Pages/_Host.cshtml
+++ b/BlazorServerTooltipsTest/Pages/_Host.cshtml
@@ -29,7 +29,7 @@
         <a class="dismiss">🗙</a>
     </div>
 
-    <script src="/js/bootstrap.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
