Update WebAssembly demo

--- a/BlazorWebAssemblyTooltipsTest/Shared/NavMenu.razor
+++ b/BlazorWebAssemblyTooltipsTest/Shared/NavMenu.razor
@@ -10,8 +10,14 @@
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <NavLink class="nav-link px-3" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link px-3" href="/dispose" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Dispose
             </NavLink>
         </div>
     </nav>
