--- a/BlazorServerTooltipsTest/Shared/NavMenu.razor
+++ b/BlazorServerTooltipsTest/Shared/NavMenu.razor
@@ -14,6 +14,12 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link px-3" href="/dispose" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Dispose
+            </NavLink>
+        </div>
     </nav>
 </div>
 
