--- a/BlazorWebAssemblyTooltipsTest/Pages/Index.razor
+++ b/BlazorWebAssemblyTooltipsTest/Pages/Index.razor
@@ -2,41 +2,46 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
-
+<h3>Default tooltip</h3>
 <Tooltip Title="Default Tooltip">
-    <button type="button" class="btn btn-primary">Default Tooltip</button>
+    <button type="button" class="btn btn-secondary">Default Tooltip</button>
 </Tooltip>
 
-
+<h3>Directions</h3>
+<p>You can change the positioning with the <strong>Placement</strong> parameter</p>
 <Tooltip Title="Tooltip on top" Placement="TooltipPlacement.Top">
-    <button type="button" class="btn btn-primary">Tooltip on top</button>
+    <button type="button" class="btn btn-secondary">Tooltip on top</button>
 </Tooltip>
 
 <Tooltip Title="Tooltip on right" Placement="TooltipPlacement.Right">
-    <button type="button" class="btn btn-primary">Tooltip on right</button>
+    <button type="button" class="btn btn-secondary">Tooltip on right</button>
 </Tooltip>
 
 <Tooltip Title="Tooltip on bottom" Placement="TooltipPlacement.Bottom">
-    <button type="button" class="btn btn-primary">Tooltip on bottom</button>
+    <button type="button" class="btn btn-secondary">Tooltip on bottom</button>
 </Tooltip>
 
 <Tooltip Title="Tooltip on left" Placement="TooltipPlacement.Left">
-    <button type="button" class="btn btn-primary">Tooltip on left</button>
+    <button type="button" class="btn btn-secondary">Tooltip on left</button>
 </Tooltip>
 
+<h3>HTML in Tooltip</h3>
+<p>Each tooltip has HTML content enabled by default. If you want you can disable this behaviour by setting the <strong>Html</strong> parameter to false</p>
 <Tooltip Title="<strong><i>Tooltip with HTML</i></strong>" Html="true">
-    <button type="button" class="btn btn-primary">Tooltip with HTML</button>
+    <button type="button" class="btn btn-secondary">Tooltip with HTML</button>
 </Tooltip>
 
-<Tooltip Title="Tooltip with no animation" Options="options">
-    <button type="button" class="btn btn-primary">Tooltip with no animation</button>
+<Tooltip Title="<strong><i>Tooltip with no HTML</i></strong>" Html="false">
+    <button type="button" class="btn btn-secondary">Tooltip with no HTML</button>
 </Tooltip>
 
-@code {
-    private TooltipOptions options = new TooltipOptions
-        {
-            Animation = false
-        };
-}
+<h3>Custom tooltips</h3>
+<p>This feature requires at least Bootstrap 5.2.0</p>
+<p>You can style your tooltip in your own way by providing the <strong>CustomClass</strong> parameter.</p>
+
+<Tooltip Title="Tooltip with Custom class" CustomClass="custom-tooltip">
+    <button type="button" class="btn btn-primary">Tooltip with Custom class</button>
+</Tooltip>
+
+
 
