--- a/BlazorWebAssemblyTooltipsTest/wwwroot/css/app.css
+++ b/BlazorWebAssemblyTooltipsTest/wwwroot/css/app.css
@@ -99,3 +99,9 @@ a, .btn-link {
     .loading-progress-text:after {
         content: var(--blazor-load-percentage-text, "Loading");
     }
+
+
+.custom-tooltip {
+    --bs-tooltip-bg: yellow;
+    --bs-tooltip-color: red;
+}
